<resources>
    <string name="app_name">Sodepe</string>
    <string name="mensagem_login">Faça seu Login</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="action_adicionar">Adicionar</string>
    <string name="action_config">Configurações</string>
    <string name="action_sobre">Sobre</string>
    <string name="action_remover">Remover</string>
    <string name="navigation_drawer_open">Navigation aberta</string>
    <string name="navigation_drawer_close">Navigation fechada</string>
    <string name="copyright">Sodepe Brasil - Todos os Direitos Reservados @ 2018</string>
    <string name="enderecoText">Endereço</string>
    <string name="enderecoTextConteudo">Rua Caraibas, 488 Perdizes São Paulo SP 05020-000</string>
    <string name="contatoText">Contato</string>
    <string name="contatoTextConteudo">(11) 3872-7485 contato@sodepebrasil.com.br</string>
    <string name="switchText">Desativar notificações</string>
    <string name="nomeConteudoText">Título</string>
    <string name="ementaConteudoText">Descrição</string>
    <string name="professorConteudoText">Palestrante</string>
    <string name="urlFotoHint">URL Foto</string>
    <string name="salvarConteudoText">salvar</string>
    <string name="enviarEmailText">Inscreva-se</string>
    <string name="editTextUsuarioText">Usuário</string>
    <string name="editTextSenhaText">Senha</string>
    <string name="checkBoxLoginText">Lembrar login</string>
    <string name="buttonEntrarText">Entrar</string>
    <string name="imageViewSobreLogoText">Sodepe Brasil</string>
    <string name="imageMapText">Sodepe Brasil Endereço Google Maps</string>
    <string name="imageCallText">Sodepe Brasil Telefone</string>
    <string name="FloatButtonText">Adicionar novo evento</string>
    <string name="imageViewUploadText">Upload de imagem</string>
    <string name="texto_usuario_text">Usuário</string>
    <string name="campoDataText">Selecione a data</string>
    <string name="campoHoraText">Horário</string>
</resources>