<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutMenuLateral"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".CadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewUpload"
                    android:contentDescription="@string/imageViewUploadText"
                    android:layout_width="wrap_content"
                    android:layout_height="210dp"
                    android:layout_marginBottom="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_empty_background" />

                <EditText
                    android:id="@+id/nomeConteudo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:ems="10"
                    android:hint="@string/nomeConteudoText"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/ementaConteudo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:ems="10"
                    android:hint="@string/ementaConteudoText"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/professorConteudo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/professorConteudoText"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/urlFoto"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:ems="10"
                    android:hint="@string/urlFotoHint"
                    android:inputType="textPersonName"
                    android:visibility="invisible" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/campoData"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:contextClickable="true"
                        android:ems="10"
                        android:hint="@string/campoDataText"
                        android:paddingLeft="5dp"
                        android:textColorLink="@color/common_google_signin_btn_text_dark_focused"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/campoHora"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_toEndOf="@+id/campoData"
                        android:contextClickable="true"
                        android:ems="10"
                        android:hint="@string/campoHoraText"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <Button
                    android:id="@+id/salvarConteudo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="80dp"
                    android:background="@drawable/button_style"
                    android:gravity="center"
                    android:text="@string/salvarConteudoText"
                    android:textColor="@android:color/background_light" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>